// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` 1`] = `
<section
  className="Grid__GridWrapper-sc-1ntp7gx-0 kfrexs Field__FieldGrid-sc-11od8ug-1 bBCooi"
  id="Group 1"
  rows={null}
>
  <h6
    className="Typography__TitleText-sc-19auepv-2 fnUHAi Field__GroupTitle-sc-11od8ug-2 hDNWii"
    fontSize="1em"
    fontWeight={600}
    letterSpacing="0px"
  >
    This is the first group
  </h6>
  <section
    className="Grid__GridWrapper-sc-1ntp7gx-0 jaAXEt Field__FieldItem-sc-11od8ug-0 hMEZxk"
    id="Field 1"
    rows={null}
  >
    <label
      className="Typography__StyledLabel-sc-19auepv-0 hskbRy Field__FieldLabel-sc-11od8ug-3 beNKSV"
      fontSize="0.879em"
      fontWeight={400}
      htmlFor={null}
      letterSpacing="0.4px"
    >
      Field 1
    </label>
    <p
      className="Typography__Paragraph-sc-19auepv-3 bxdsLc Field__FieldValue-sc-11od8ug-4 lnIMQZ"
      fontSize="0.879em"
      fontWeight={600}
      id={null}
      letterSpacing="0.2px"
    >
      Value Goes Here
    </p>
  </section>
  <section
    className="Grid__GridWrapper-sc-1ntp7gx-0 jaAXEt Field__FieldItem-sc-11od8ug-0 hMEZxk"
    id="Field 2"
    rows={null}
  >
    <label
      className="Typography__StyledLabel-sc-19auepv-0 hskbRy Field__FieldLabel-sc-11od8ug-3 beNKSV"
      fontSize="0.879em"
      fontWeight={400}
      htmlFor={null}
      letterSpacing="0.4px"
    >
      Field 2
    </label>
    <p
      className="Typography__Paragraph-sc-19auepv-3 bxdsLc Field__FieldValue-sc-11od8ug-4 lnIMQZ"
      fontSize="0.879em"
      fontWeight={600}
      id={null}
      letterSpacing="0.2px"
    >
      Value Goes Here
    </p>
  </section>
  <section
    className="Grid__GridWrapper-sc-1ntp7gx-0 jaAXEt Field__FieldItem-sc-11od8ug-0 hMEZxk"
    id="Field 3"
    rows={null}
  >
    <label
      className="Typography__StyledLabel-sc-19auepv-0 hskbRy Field__FieldLabel-sc-11od8ug-3 beNKSV"
      fontSize="0.879em"
      fontWeight={400}
      htmlFor={null}
      letterSpacing="0.4px"
    >
      Field 3
    </label>
    <p
      className="Typography__Paragraph-sc-19auepv-3 bxdsLc Field__FieldValue-sc-11od8ug-4 lnIMQZ"
      fontSize="0.879em"
      fontWeight={600}
      id={null}
      letterSpacing="0.2px"
    />
  </section>
</section>
`;

exports[` 2`] = `
<section
  className="Grid__GridWrapper-sc-1ntp7gx-0 kfrexs Field__FieldGrid-sc-11od8ug-1 bBCooi"
  id={null}
  rows={null}
>
  <h6
    className="Typography__TitleText-sc-19auepv-2 fnUHAi Field__GroupTitle-sc-11od8ug-2 hDNWii"
    fontSize="1em"
    fontWeight={600}
    letterSpacing="0px"
  >
    Fields via Array
  </h6>
  <section
    className="Grid__GridWrapper-sc-1ntp7gx-0 jaAXEt Field__FieldItem-sc-11od8ug-0 hMEZxk"
    id="Field 1"
    rows={null}
  >
    <label
      className="Typography__StyledLabel-sc-19auepv-0 hskbRy Field__FieldLabel-sc-11od8ug-3 beNKSV"
      fontSize="0.879em"
      fontWeight={400}
      htmlFor={null}
      letterSpacing="0.4px"
    >
      Field 1
    </label>
    <p
      className="Typography__Paragraph-sc-19auepv-3 bxdsLc Field__FieldValue-sc-11od8ug-4 lnIMQZ"
      fontSize="0.879em"
      fontWeight={600}
      id={null}
      letterSpacing="0.2px"
    >
      Value Goes Here
    </p>
  </section>
  <section
    className="Grid__GridWrapper-sc-1ntp7gx-0 jaAXEt Field__FieldItem-sc-11od8ug-0 hMEZxk"
    id="Field 2"
    rows={null}
  >
    <label
      className="Typography__StyledLabel-sc-19auepv-0 hskbRy Field__FieldLabel-sc-11od8ug-3 beNKSV"
      fontSize="0.879em"
      fontWeight={400}
      htmlFor={null}
      letterSpacing="0.4px"
    >
      Field 2
    </label>
    <p
      className="Typography__Paragraph-sc-19auepv-3 bxdsLc Field__FieldValue-sc-11od8ug-4 lnIMQZ"
      fontSize="0.879em"
      fontWeight={600}
      id={null}
      letterSpacing="0.2px"
    >
      Value Goes Here
    </p>
  </section>
  <section
    className="Grid__GridWrapper-sc-1ntp7gx-0 jaAXEt Field__FieldItem-sc-11od8ug-0 hMEZxk"
    id="Field 3"
    rows={null}
  >
    <label
      className="Typography__StyledLabel-sc-19auepv-0 hskbRy Field__FieldLabel-sc-11od8ug-3 beNKSV"
      fontSize="0.879em"
      fontWeight={400}
      htmlFor={null}
      letterSpacing="0.4px"
    >
      Field 3
    </label>
    <p
      className="Typography__Paragraph-sc-19auepv-3 bxdsLc Field__FieldValue-sc-11od8ug-4 lnIMQZ"
      fontSize="0.879em"
      fontWeight={600}
      id={null}
      letterSpacing="0.2px"
    >
      Value Goes Here
    </p>
  </section>
</section>
`;

exports[` 3`] = `
<section
  className="Grid__GridWrapper-sc-1ntp7gx-0 kfrexs Field__FieldGrid-sc-11od8ug-1 bBCooi"
  id={null}
  rows={null}
>
  <h6
    className="Typography__TitleText-sc-19auepv-2 fnUHAi Field__GroupTitle-sc-11od8ug-2 hDNWii"
    fontSize="1em"
    fontWeight={600}
    letterSpacing="0px"
  >
    Inline Fields (Default)
  </h6>
  <section
    className="Grid__GridWrapper-sc-1ntp7gx-0 jaAXEt Field__FieldItem-sc-11od8ug-0 hMEZxk"
    id="Field 1"
    rows={null}
  >
    <label
      className="Typography__StyledLabel-sc-19auepv-0 hskbRy Field__FieldLabel-sc-11od8ug-3 beNKSV"
      fontSize="0.879em"
      fontWeight={400}
      htmlFor={null}
      letterSpacing="0.4px"
    >
      Field 1
    </label>
    <p
      className="Typography__Paragraph-sc-19auepv-3 bxdsLc Field__FieldValue-sc-11od8ug-4 lnIMQZ"
      fontSize="0.879em"
      fontWeight={600}
      id={null}
      letterSpacing="0.2px"
    >
      Value Goes Here
    </p>
  </section>
  <section
    className="Grid__GridWrapper-sc-1ntp7gx-0 jaAXEt Field__FieldItem-sc-11od8ug-0 hMEZxk"
    id="Field 2"
    rows={null}
  >
    <label
      className="Typography__StyledLabel-sc-19auepv-0 hskbRy Field__FieldLabel-sc-11od8ug-3 beNKSV"
      fontSize="0.879em"
      fontWeight={400}
      htmlFor={null}
      letterSpacing="0.4px"
    >
      Field 2
    </label>
    <p
      className="Typography__Paragraph-sc-19auepv-3 bxdsLc Field__FieldValue-sc-11od8ug-4 lnIMQZ"
      fontSize="0.879em"
      fontWeight={600}
      id={null}
      letterSpacing="0.2px"
    >
      Value Goes Here
    </p>
  </section>
  <section
    className="Grid__GridWrapper-sc-1ntp7gx-0 jaAXEt Field__FieldItem-sc-11od8ug-0 hMEZxk"
    id="Field 3"
    rows={null}
  >
    <label
      className="Typography__StyledLabel-sc-19auepv-0 hskbRy Field__FieldLabel-sc-11od8ug-3 beNKSV"
      fontSize="0.879em"
      fontWeight={400}
      htmlFor={null}
      letterSpacing="0.4px"
    >
      Field 3
    </label>
    <p
      className="Typography__Paragraph-sc-19auepv-3 bxdsLc Field__FieldValue-sc-11od8ug-4 lnIMQZ"
      fontSize="0.879em"
      fontWeight={600}
      id={null}
      letterSpacing="0.2px"
    >
      Value Goes Here
    </p>
  </section>
</section>
`;
